argo/apps/it-tools/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-tools
  namespace: tools
  annotations:
    argocd.argoproj.io/tracking-id: it-tools:apps/Deployment:tools/it-tools
  labels:
    app.kubernetes.io/name: it-tools
    app.kubernetes.io/instance: it-tools
    app.kubernetes.io/part-of: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: it-tools
      app.kubernetes.io/instance: it-tools
  template:
    metadata:
      labels:
        app.kubernetes.io/name: it-tools
        app.kubernetes.io/instance: it-tools
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: it-tools
          image: ghcr.io/corentinth/it-tools:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
