argo/apps/it-tools/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: it-tools
  namespace: tools
  annotations:
    argocd.argoproj.io/tracking-id: it-tools:/Service:tools/it-tools
    homepage/name: "IT Tools"
    homepage/namespace: "tools"
    homepage/url: "http://10.0.0.32"
    homepage/icon: "terminal"
    homepage/group: "Tools"
    homepage/statusStyle: "dot"
    metallb.io/ip-allocated-from-pool: default-address-pool
  labels:
    app.kubernetes.io/name: it-tools
    app.kubernetes.io/instance: it-tools
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.0.32
  selector:
    app.kubernetes.io/name: it-tools
    app.kubernetes.io/instance: it-tools
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
