argo/apps/it-tools/ingress.yaml
    # Middleware: redirect HTTP -> HTTPS
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: it-tools-redirect-https
  namespace: tools
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
# IngressRoute for HTTPS
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: it-tools
  namespace: tools
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tools.smeyer.ca`)
      kind: Rule
      services:
        - name: it-tools
          port: 80
  tls:
    certResolver: letsencrypt
---
# IngressRoute for HTTP (only used for redirect)
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: it-tools-http
  namespace: tools
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`tools.smeyer.ca`)
      kind: Rule
      middlewares:
        - name: it-tools-redirect-https
      services:
        - name: it-tools
          port: 80
